--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+@import "react-alice-carousel/lib/alice-carousel.css";
+body{
+  font-size: 12px;
+  /* background: url('https://rohitazad.github.io/ng5-all-calculator/bg.2ed3a3a83b393c7abc13.png') repeat 0 0; */
+  background: #ccc;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapContaine{
+  padding-top:2px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.topheading1 {
+  margin: 25px 20px;
+  font-size: 2rem;
+  font-weight: bold;
 }
